--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
+    "@supabase/supabase-js": "^2.83.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
